Add block lements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Tax Doctor</title>
 </head>
 <body>
-    
+   <div class="container">
+       <header>
+           <h1>Your Tax Doctor</h1>
+       </header>
+       <main>
+           <section>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum consequuntur sit quaerat ducimus saepe beatae eum dolorem aperiam dicta! Quas modi velit non sequi alias aut ipsum eum tempora voluptatem?</p>
+               <article><a href="https://itax.kra.go.ke/KRA-Portal/">File your taxes</a></article>
+           </section>
+           <aside>
+               <img src="images/taxes.jpg" alt="An image of tax">
+           </aside>
+       </main>
+       <footer>
+           <p>Contact <a href="https://itax.kra.go.ke/KRA-Portal/m/KRA-Portal/main.htm?actionCode=showSessionOutHomePage">Here</a></p>
+       </footer>
+   </div>
 </body>
 </html>
